Adjusting carousel class

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </nav>
       
       <!-- Image Carousel -->
-      <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="images/wes-hicks-Qa2rx5RSAAI-unsplash.webp" class="d-block w-100" alt="Scenic mountain view in Macon County, NC">
