Adding content to bottom of home page

--- a/index.html
+++ b/index.html
@@ -78,27 +78,25 @@
         <div class="container my-5 home-section">
             <div class="row g-4 align-items-center">
               <div class="col-md-6 order-1 order-md-1">
-                <h2>Discover Macon County</h2>
+                <h2>Discover Life in Macon County</h2>
                 <p>
-                  Macon County offers a rich blend of natural beauty, community spirit, 
-                  and meaningful opportunities for residents, businesses, and visitors.
-                  With scenic mountains, accessible services, and a welcoming rural culture, 
-                  the county provides a place where people can live, work, and thrive.
+                    Macon County is more than a destination — it’s a community built on connection, collaboration, 
+                    and the natural beauty that surrounds us. With vibrant small towns, rich cultural history, and 
+                    outdoor adventures in every direction, our county offers something for everyone.
                 </p>
               </div>
               <div class="col-md-6 order-2 order-md-2">
-                <img src="images/joel-mott-O9Ogddfvl-U-unsplash.webp" class="img-fluid rounded" alt="Goofy photo of young adults having fun">
+                <img src="images/gary-bendig-XEsmJiNAO5o-unsplash.webp" class="img-fluid rounded" alt="deer on trail with hikers in the background">
               </div>
               <div class="col-md-6 order-4 order-md-3">
-                <img src="images/gary-bendig-XEsmJiNAO5o-unsplash.webp" class="img-fluid rounded" alt="deer on trail with hikers in the background">
+                <img src="images/joel-mott-O9Ogddfvl-U-unsplash.webp" class="img-fluid rounded" alt="Goofy photo of young adults having fun">
               </div>
               <div class="col-md-6 order-3 order-md-4">
                 <h2>A Place to Connect</h2>
                 <p>
-                  Whether you're submitting forms, exploring community resources, 
-                  or planning a visit, our redesigned website is here to make everything easier.
-                  Our goal is to provide clear information, support community growth, 
-                  and keep residents connected to what matters most.
+                    Our website is here to help you access county services, explore programs for residents and businesses, 
+                    and stay informed about upcoming events and initiatives. Whether you’re submitting a form, planning a visit, 
+                    or simply learning more about the place we call home, we’re glad you’re here.
                 </p>
               </div>
           
@@ -107,6 +105,79 @@
           </div>
         
     </div>
+    <div class="bottom-div container">
+    </div>
+
+    <div class="container">
+        <h3>County News</h3>
+        <ul class="list-unstyled">
+            <li>New Online Services Now Available</li>
+                <ul>
+                    <li>Residents can now access permit applications, tax documents, and service requests through the updated online portal.</li>
+                </ul>
+                <li>Public Safety Update</li>
+                <ul>
+                    <li>Macon County Emergency Services has introduced upgraded communication systems to improve response times and community alerts.</li>
+                </ul>
+                <li>Infrastructure Improvements Underway</li>
+                <ul>
+                    <li>Crews have begun enhancements to water, sewer, and roadway systems as part of the county’s long-term improvement plan.</li>
+                </ul>
+        </ul>
+
+    </div>
+
+    <div class="news container">
+        <div class="row g-4 mt-4 mb-4">
+             <div class="col-12 col-md-6 text-start  border rounded p-4">
+    <h3>County News</h3>
+    <ul class="list-unstyled">
+      <li>
+        <strong>New Online Services Now Available</strong>
+            <ul>
+                <li>Residents can now access permit applications, tax documents, and service requests through the updated online portal.</li>
+            </ul>
+      </li>
+      <li>
+            <strong>Public Safety Update</strong>
+            <ul>
+                <li>Macon County Emergency Services has introduced upgraded communication systems to improve response times and community alerts.</li>
+            </ul>
+      </li>
+      <li>
+            <strong>Infrastructure Improvements Underway</strong>
+            <ul>
+                <li>Crews have begun enhancements to water, sewer, and roadway systems as part of the county’s long-term improvement plan.</li>
+            </ul>
+      </li>
+    </ul>
+          </div>
+          <div class="col-12 col-md-6 text-start  border rounded p-4">
+    <h3>County News</h3>
+    <ul class="list-unstyled">
+      <li>
+        <strong>New Online Services Now Available</strong>
+            <ul>
+                <li>Residents can now access permit applications, tax documents, and service requests through the updated online portal.</li>
+            </ul>
+      </li>
+      <li>
+            <strong>Public Safety Update</strong>
+            <ul>
+                <li>Macon County Emergency Services has introduced upgraded communication systems to improve response times and community alerts.</li>
+            </ul>
+      </li>
+      <li>
+            <strong>Infrastructure Improvements Underway</strong>
+            <ul>
+                <li>Crews have begun enhancements to water, sewer, and roadway systems as part of the county’s long-term improvement plan.</li>
+            </ul>
+      </li>
+    </ul>
+          </div>
+</div>
+</div>
+
       <footer class="footer mt-5">
         <div class="container py-4">
             <div class="row text-center text-md-start">
