Updating right info box

--- a/index.html
+++ b/index.html
@@ -134,24 +134,27 @@
     </ul>
           </div>
           <div class="col-12 col-md-6 text-start  border rounded p-4">
-    <h3>County News</h3>
+    <h3>Upcoming Events</h3>
     <ul class="list-unstyled">
       <li>
-        <strong>New Online Services Now Available</strong>
+        <strong>Holiday Safetty Awareness Week</strong>
             <ul>
-                <li>Residents can now access permit applications, tax documents, and service requests through the updated online portal.</li>
+                <li>December 9 - 15</li>
+                <li>Macon County Emergency Services will host daily safety tips, community demonstrations, and winter preparedness resources to help residents stay safe throughout the season.</li>
             </ul>
       </li>
       <li>
-            <strong>Public Safety Update</strong>
+            <strong>Local Business Resource Workshop</strong>
             <ul>
-                <li>Macon County Emergency Services has introduced upgraded communication systems to improve response times and community alerts.</li>
+                <li>December 14 - 10:00 AM, Comunity Services Building</li>
+                <li>Macon County Emergency Services will host daily safety tips, community demonstrations, and winter preparedness resources to help residents stay safe throughout the season.</li>
             </ul>
       </li>
       <li>
-            <strong>Infrastructure Improvements Underway</strong>
+            <strong>Parks and Rec - Winter Trails Day</strong>
             <ul>
-                <li>Crews have begun enhancements to water, sewer, and roadway systems as part of the county’s long-term improvement plan.</li>
+                <li>December 21 - 9:00 AM - Copperhead Recreation Area</li>
+                <li>Small business owners and entrepreneurs are invited to learn about local grants, development programs, and new county support services designed to strengthen economic growth.</li>
             </ul>
       </li>
     </ul>
