--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
   rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <title>Macon County, North Carolina</title>
+  <title>Macon County, North Carolina, Government Website</title>
 </head>
 
 
@@ -73,7 +73,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h1 class="home-headline">Welcome to Macon County, NC</h1>
+      <h1 class="home-headline row my-5">Welcome to Macon County, NC</h1>
       <div class="container">
         <div class="container my-5 home-section">
             <div class="row g-4 align-items-center">
