--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h1 class="home-headline row my-5">Welcome to Macon County, NC</h1>
+      <h1 class="home-headline mx-5">Welcome to Macon County, NC</h1>
       <div class="container">
         <div class="container my-5 home-section">
             <div class="row g-4 align-items-center">
@@ -134,7 +134,7 @@
     </ul>
           </div>
           <div class="col-12 col-md-6 text-start  border rounded p-4">
-    <h3>Upcoming Events</h3>
+    <h3><a href="events.html">Upcoming Events</a></h3>
     <ul class="list-unstyled">
       <li>
         <strong>Holiday Safetty Awareness Week</strong>
