--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
   rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <title>Macon County, North Carolina, Government Website</title>
+  <title>Macon County, North Carolina, Government Website Homepage</title>
 </head>
 
 
