naming active links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <!-- Right side: Nav items -->
           <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="government.html">Government</a></li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="community-resources.html">Community Resources</a>
