--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 </ul>
               </li>
               <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+              <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
             </ul>
           </div>
       
