--- a/visitors.html
+++ b/visitors.html
@@ -33,7 +33,7 @@
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="government.html">Government</a></li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="community-resources.html">Community Resources</a>
+                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="community-resources.html">Community Resources</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="residents.html">Residents</a></li>
                   <li><a class="dropdown-item" href="businesses.html">Businesses</a></li>
