Adding Contact form testing

--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="government.html">Government</a></li>
-                        <li><a href="community-resources.html">Community Resources</a></li>
+                        <li><a href="residents.html">Residents</a></li>
+                        <li><a href="businesses.html">Businesses</a></li>
                         <li><a href="visitors.html">Visitors</a></li>
                         <li><a href="events.html">Events</a></li>
                         <li><a href="contact.html">Contacts</a></li>
