--- a/government.html
+++ b/government.html
@@ -46,7 +46,36 @@
       
         </div>
       </nav>
+      <footer class="footer mt-5">
+        <div class="container py-4">
+            <div class="row text-center text-md-start">
+                <div class="col-12 col-md-6 order-1 order-md-1 mb-4 mb-md-0 text-md-start ">
+                  <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="government.html">Government</a></li>
+                        <li><a href="residents.html">Residents</a></li>
+                        <li><a href="businesses.html">Businesses</a></li>
+                        <li><a href="visitors.html">Visitors</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="contact.html">Contacts</a></li>
+                    </ul>
+             
+                </div>
+                <div class="col-12 col-md-6 order-2 order-md-2 text-md-end">
+                    <h5>Macon County,NC</h5>
+                    <p>5 West Main Street<br>
+                       Franklin, NC 28734<br>
+                       Phone: 828-349-2000
+                    </p>
 
+                </div>
+            </div>
+            <div class="text-center pt-3 small">
+                <p>&copy; 2025 Macon County, NC. All rights reserved.</p>
+            </div>
+        </div>
+      </footer>
 
 
 
