--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,33 @@
       
         </div>
       </nav>
+
+<!-- Image Carousel -->
+<div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/gene-gallin-pSMhMHRyLcE-unsplash2.webp" class="d-block w-100" alt="Small town in Macon County, NC">
+      </div>
+      <div class="carousel-item">
+        <img src="images/delaney-van-CmK2cSIqYhI-unsplash.webp" class="d-block w-100" alt="Black bear and two cubs walking through a field in Macon County, NC">
+      </div>
+      <div class="carousel-item">
+        <img src="images/trevor-vannoy-bkGj_pdkReo-unsplash.webp" class="d-block w-100" alt="Water falls in national forest in Macon County, NC">
+      </div>
+    </div>
+  
+    <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidded="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+  
+    <button class="carousel-control-next" type="button" data-bs-target="#homeCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidded="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
 <div class="container my-5"
       <form>
         <div class="row mb-3">
