--- a/visitors.html
+++ b/visitors.html
@@ -48,6 +48,31 @@
         </div>
       </nav>
 
+      <!-- Image Carousel -->
+      <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/wes-hicks-Qa2rx5RSAAI-unsplash.webp" class="d-block w-100" alt="Scenic mountain view in Macon County, NC">
+          </div>
+          <div class="carousel-item">
+            <img src="images/delaney-van-CmK2cSIqYhI-unsplash.webp" class="d-block w-100" alt="Black bear and two cubs walking through a field">
+          </div>
+          <div class="carousel-item">
+            <img src="images/trevor-vannoy-bkGj_pdkReo-unsplash.webp" class="d-block w-100" alt="Water falls in national forest">
+          </div>
+        </div>
+      
+        <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidded="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+      
+        <button class="carousel-control-next" type="button" data-bs-target="#homeCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidded="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
       <footer class="footer mt-5">
         <div class="container py-4">
             <div class="row text-center text-md-start">
