Adding form border

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
   </div>
 
 
-<div class="container my-5"
+<div class="container my-5 border rounded p-4"
       <form>
         <div class="row mb-3">
          <div class=" col-12 col-md-6 mb-3 mb-md-0">
