Collapsed Menu change test

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
           </button>
       
           <!-- Right side: Nav items -->
-          <div class="collapse navbar-collapse" id="mainNav">
+          <div class="collapse navbar-collapse justify-content-end text-end" id="mainNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="government.html">Government</a></li>
