--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <title>Macon County, North Carolina, Government Contact page</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg my-navbar navbar-dark">
+    <nav class="navbar navbar-expand-md my-navbar navbar-dark">
         <div class="container">
       
           <!-- Left side: Logo / Seal / Site name -->
