Hamburger Fix Test

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
           </a>
       
           <!-- Mobile toggle -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+          <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
             <span class="navbar-toggler-icon"></span>
           </button>
       
