--- a/events.html
+++ b/events.html
@@ -51,13 +51,10 @@
       <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/wes-hicks-Qa2rx5RSAAI-unsplash.webp" class="d-block w-100" alt="Scenic mountain view in Macon County, NC">
+            <img src="images/green-liu-QdigBPnEOpw-unsplash.webp" class="d-block w-100" alt="Group of people in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/delaney-van-CmK2cSIqYhI-unsplash.webp" class="d-block w-100" alt="Black bear and two cubs walking through a field">
-          </div>
-          <div class="carousel-item">
-            <img src="images/trevor-vannoy-bkGj_pdkReo-unsplash.webp" class="d-block w-100" alt="Water falls in national forest">
+            <img src="images/samantha-watkins-5bNE923Ex_s-unsplash.webp" class="d-block w-100" alt="Park Bench in Macon County, NC">
           </div>
         </div>
       
