link updates and Events layout

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="government.html">Government</a></li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="community-resources.html">Community Resources</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">Community Resources</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="residents.html">Residents</a></li>
                   <li><a class="dropdown-item" href="businesses.html">Businesses</a></li>
@@ -72,8 +72,9 @@
     </button>
   </div>
 
-
-<div class="container my-5 border rounded p-4"
+  <div class="container my-5">
+    <h3>Please fill out the form below and we will be in touch within two business days</h3>
+<div class="container my-5 border rounded p-4">
       <form>
         <div class="row mb-3">
          <div class=" col-12 col-md-6 mb-3 mb-md-0">
