--- a/events.html
+++ b/events.html
@@ -32,7 +32,7 @@
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="government.html">Government</a></li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="community-resources.html">Community Resources</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">Community Resources</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="residents.html">Residents</a></li>
                   <li><a class="dropdown-item" href="businesses.html">Businesses</a></li>
@@ -68,6 +68,24 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <h1 class="home-headline mx-5">Welcome to Macon County, NC</h1>
+      <div class="container">
+        <div class="container my-5 home-section">
+            <div class="row g-4 align-items-center">
+              <div class="col-md-6 order-1 order-md-1">
+                <h2>Discover Life in Macon County</h2>
+                <p>
+                    Macon County is more than a destination — it’s a community built on connection, collaboration, 
+                    and the natural beauty that surrounds us. With vibrant small towns, rich cultural history, and 
+                    outdoor adventures in every direction, our county offers something for everyone.
+                </p>
+              </div>
+              <div class="col-md-6 order-2 order-md-2">
+                <img src="images/gary-bendig-XEsmJiNAO5o-unsplash.webp" class="img-fluid rounded" alt="deer on trail with hikers in the background">
+              </div>
+              </div>
+            </div>
+            </div>
 
       <footer class="footer mt-5">
         <div class="container py-4">
