--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="government.html">Government</a></li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="community-resources.html">Community Resources</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">Community Resources</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="residents.html">Residents</a></li>
                   <li><a class="dropdown-item" href="businesses.html">Businesses</a></li>
