--- a/events.html
+++ b/events.html
@@ -73,11 +73,19 @@
         <div class="container my-5 home-section">
             <div class="row g-4 align-items-center">
               <div class="col-md-6 order-1 order-md-1">
-                <h2>Discover Life in Macon County</h2>
+                <h2>Upcoming Events</h2>
                 <p>
-                    Macon County is more than a destination — it’s a community built on connection, collaboration, 
-                    and the natural beauty that surrounds us. With vibrant small towns, rich cultural history, and 
-                    outdoor adventures in every direction, our county offers something for everyone.
+                  <table class="table table-striped container border rounded p-4">
+                    <thead><tr><th>Date</th><th>Event Title</th><th>Location</th></tr></thead><tbody>
+                      <tr><td>12/9-12/15</td><td>Holiday Safety Awareness Week</td><td>Macon County Emergency Services Center</td></tr>
+                      <tr><td>12/12</td><td>Christmas Parade</td><td>Downtown </td></tr>
+                      <tr><td>12/14</td><td>Local Business Resource Workshop</td><td>Comunity Services Building </td></tr>
+                      <tr><td>12/21</td><td>Winter Trails Day</td><td>Copperhead Recreation Area </td></tr>
+                     <tr><td>12/24-12/26</td><td>Offices Closed </td><td>N/A</td></tr>
+                     <tr><td>12/31</td><td>New Years Eve Celebration</td><td>Comedy/Drama</td></tr>
+                     <tr><td>1/14</td><td>Board of Comissioners Meeting</td><td>Macon County Courthouse</td></tr>
+                      <tr><td>1/25</td><td>Community Safety Town Hall</td><td>Macon County Emergency Services Center</td></tr>
+                    </tbody></table>
                 </p>
               </div>
               <div class="col-md-6 order-2 order-md-2">
