--- a/residents.html
+++ b/residents.html
@@ -71,7 +71,26 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
+      <div class="container">
+        <div class="row">
+      <div class="col-12 col-md-3 table-striped border">
+        <nav class="nav flex-column">
+          <a class="nav-link active" aria-current="page" href="#">Living in Macon County</a>
+          <a class="nav-link" href="#">Utility Billing and Payments</a>
+          <a class="nav-link" href="#">Solid Waste and Recycling</a>
+          <a class="nav-link" href="#">Public Transportation</a>
+          <a class="nav-link" href="#">Parks and Rec</a>
+          <a class="nav-link" href="#">Library Services</a>
+          <a class="nav-link" href="#">Senior Services</a>
+          <a class="nav-link" href="#">Pay Property Taxes</a>
+        </nav>
+      </div>
+      <div class="col-12 col-md-9">
+        <h2>Living in Macon County</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque gravida sem vel tristique tincidunt. Nullam ut facilisis mi. Cras tempus nisl semper, ultrices sapien et, lobortis nisi. Vestibulum quis vestibulum augue. Mauris facilisis volutpat metus, non dapibus lectus scelerisque vel. Nam at volutpat felis. Nulla iaculis ipsum nec nisi eleifend vehicula. Mauris tempor lorem dui, ac hendrerit risus commodo eget. Phasellus purus metus, iaculis non sodales sed, rutrum quis libero.
+<br>
+    Nullam fringilla massa eget urna rutrum, a laoreet velit sollicitudin. Nunc sed fermentum elit. Nulla vulputate nisi risus, sed elementum lectus venenatis sit amet. Donec dapibus est vel nunc malesuada scelerisque. Aliquam suscipit lacinia purus ut porttitor. Vivamus ut risus gravida, aliquet ante sit amet, tincidunt magna. Nunc sollicitudin congue augue vitae dictum. Suspendisse potenti. Nam porta nunc eu neque ornare pretium. Quisque rutrum erat sed nisl aliquet vehicula. Duis eros neque, tristique at eros ut, consequat elementum nibh. Nullam sagittis nulla at elit aliquam, vel euismod libero cursus. Praesent sit amet magna eu neque sodales lobortis. Cras commodo elit in odio consequat consequat. Nunc lacus dolor, gravida a vehicula et, interdum eu ex. Sed eleifend ultrices ullamcorper.</p>
+      </div>
       <footer class="footer mt-5">
         <div class="container py-4">
             <div class="row text-center text-md-start">
