--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/wes-hicks-Qa2rx5RSAAI-unsplash.webp" class="d-block w-100" alt="Scenic mountain view in Macon County, NC">
+            <img src="images/JPG/wes-hicks-Qa2rx5RSAAI-unsplash.jpg" class="d-block w-100" alt="Scenic mountain view in Macon County, NC">
           </div>
           <div class="carousel-item">
             <img src="images/delaney-van-CmK2cSIqYhI-unsplash.webp" class="d-block w-100" alt="Black bear and two cubs walking through a field">
