--- a/visitors.html
+++ b/visitors.html
@@ -52,10 +52,10 @@
       <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/jake-melara-Yh6K2eTr_FY-unsplash.webp" class="d-block w-100" alt="Woman hiking in Macon County, NC">
+            <img src="images/JPG/jake-melara-Yh6K2eTr_FY-unsplash.jpg" class="d-block w-100" alt="Woman hiking in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/paddy-pohlod-BTXqStfYI04-unsplash.webp" class="d-block w-100" alt="View from white water rafting in Macon County, NC">
+            <img src="images/JPG/paddy-pohlod-BTXqStfYI04-unsplash.jpg" class="d-block w-100" alt="View from white water rafting in Macon County, NC">
           </div>
         </div>
       
