--- a/businesses.html
+++ b/businesses.html
@@ -51,10 +51,10 @@
       <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/redd-francisco-5U_28ojjgms-unsplash.webp" class="d-block w-100" alt="Group of young people conducting business in Macon County, NC">
+            <img src="images/JPG/redd-francisco-5U_28ojjgms-unsplash.jpg" class="d-block w-100" alt="Group of young people conducting business in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/rodeo-project-management-software-ONe-snuCaqQ-unsplash.webp" class="d-block w-100" alt="Group of formal people conducting business in Macon County, NC">
+            <img src="images/JPG/rodeo-project-management-software-ONe-snuCaqQ-unsplash.jpg" class="d-block w-100" alt="Group of formal people conducting business in Macon County, NC">
           </div>
         </div>
       
