--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
 <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/gene-gallin-pSMhMHRyLcE-unsplash2.webp" class="d-block w-100" alt="Small town in Macon County, NC">
+        <img src="images/JPG/gene-gallin-pSMhMHRyLcE-unsplash2.jpg" class="d-block w-100" alt="Small town in Macon County, NC">
       </div>
       <div class="carousel-item">
-        <img src="images/delaney-van-CmK2cSIqYhI-unsplash.webp" class="d-block w-100" alt="Black bear and two cubs walking through a field in Macon County, NC">
+        <img src="images/JPG/delaney-van-CmK2cSIqYhI-unsplash.jpg" class="d-block w-100" alt="Black bear and two cubs walking through a field in Macon County, NC">
       </div>
       <div class="carousel-item">
-        <img src="images/trevor-vannoy-bkGj_pdkReo-unsplash.webp" class="d-block w-100" alt="Water falls in national forest in Macon County, NC">
+        <img src="images/JPG/trevor-vannoy-bkGj_pdkReo-unsplash.jpg" class="d-block w-100" alt="Water falls in national forest in Macon County, NC">
       </div>
     </div>
   
