--- a/events.html
+++ b/events.html
@@ -51,10 +51,10 @@
       <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/green-liu-QdigBPnEOpw-unsplash.webp" class="d-block w-100" alt="Group of people in Macon County, NC">
+            <img src="images/JPG/green-liu-QdigBPnEOpw-unsplash.jpg" class="d-block w-100" alt="Group of people in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/samantha-watkins-5bNE923Ex_s-unsplash.webp" class="d-block w-100" alt="Park Bench in Macon County, NC">
+            <img src="images/JPG/samantha-watkins-5bNE923Ex_s-unsplash.jpg" class="d-block w-100" alt="Park Bench in Macon County, NC">
           </div>
         </div>
       
@@ -89,7 +89,7 @@
                 </p>
               </div>
               <div class="col-md-6 order-2 order-md-2">
-                <img src="images/vince-fleming-jmwlyZDxu80-unsplash.webp" class="img-fluid rounded" alt="deer on trail with hikers in the background">
+                <img src="images/JPG/vince-fleming-jmwlyZDxu80-unsplash.jpg" class="img-fluid rounded" alt="deer on trail with hikers in the background">
               </div>
               </div>
             </div>
