--- a/government.html
+++ b/government.html
@@ -51,13 +51,13 @@
       <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/pexels-pixabay-236556.webp" class="d-block w-100" alt="Local government building in Macon County, NC">
+            <img src="images/JPG/pexels-pixabay-236556.jpg" class="d-block w-100" alt="Local government building in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/elias-null-YX01TgMBJmg-unsplash.webp" class="d-block w-100" alt="Fire truck in Macon County, NC">
+            <img src="images/JPG/elias-null-YX01TgMBJmg-unsplash.jpg" class="d-block w-100" alt="Fire truck in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/samantha-watkins-5bNE923Ex_s-unsplash.webp" class="d-block w-100" alt="Park Bench in Macon County, NC">
+            <img src="images/JPG/samantha-watkins-5bNE923Ex_s-unsplash.jpg" class="d-block w-100" alt="Park Bench in Macon County, NC">
           </div>
         </div>
       
