--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <img src="images/JPG/wes-hicks-Qa2rx5RSAAI-unsplash.jpg" class="d-block w-100" alt="Scenic mountain view in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/delaney-van-CmK2cSIqYhI-unsplash.webp" class="d-block w-100" alt="Black bear and two cubs walking through a field">
+            <img src="images/JPG/delaney-van-CmK2cSIqYhI-unsplash.jpg" class="d-block w-100" alt="Black bear and two cubs walking through a field in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/trevor-vannoy-bkGj_pdkReo-unsplash.webp" class="d-block w-100" alt="Water falls in national forest">
+            <img src="images/JPG/trevor-vannoy-bkGj_pdkReo-unsplash.jpg" class="d-block w-100" alt="Water falls in national forest in Macon County, NC">
           </div>
         </div>
       
@@ -86,10 +86,10 @@
                 </p>
               </div>
               <div class="col-md-6 order-2 order-md-2">
-                <img src="images/gary-bendig-XEsmJiNAO5o-unsplash.webp" class="img-fluid rounded" alt="deer on trail with hikers in the background">
+                <img src="images/JPG/gary-bendig-XEsmJiNAO5o-unsplash.jpg" class="img-fluid rounded" alt="deer on trail with hikers in the background">
               </div>
               <div class="col-md-6 order-4 order-md-3">
-                <img src="images/joel-mott-O9Ogddfvl-U-unsplash.webp" class="img-fluid rounded" alt="Goofy photo of young adults having fun">
+                <img src="images/JPG/joel-mott-O9Ogddfvl-U-unsplash.jpg" class="img-fluid rounded" alt="Goofy photo of young adults having fun">
               </div>
               <div class="col-md-6 order-3 order-md-4">
                 <h2>A Place to Connect</h2>
