--- a/residents.html
+++ b/residents.html
@@ -51,10 +51,10 @@
       <div id="homeCarousel" class="home-carousel carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/rowan-heuvel-bjej8BY1JYQ-unsplash.webp" class="d-block w-100" alt="House in Macon County, NC">
+            <img src="images/JPG/rowan-heuvel-bjej8BY1JYQ-unsplash.jpg" class="d-block w-100" alt="House in Macon County, NC">
           </div>
           <div class="carousel-item">
-            <img src="images/christian-koch-D_4R9CcYZOk-unsplash.webp" class="d-block w-100" alt="House stoop in Macon County, NC">
+            <img src="images/JPG/christian-koch-D_4R9CcYZOk-unsplash.jpg" class="d-block w-100" alt="House stoop in Macon County, NC">
           </div>
         </div>
       
