--- a/events.html
+++ b/events.html
@@ -79,10 +79,10 @@
                     <thead><tr><th>Date</th><th>Event Title</th><th>Location</th></tr></thead><tbody>
                       <tr><td>12/9-12/15</td><td>Holiday Safety Awareness Week</td><td>Macon County Emergency Services Center</td></tr>
                       <tr><td>12/12</td><td>Christmas Parade</td><td>Downtown </td></tr>
-                      <tr><td>12/14</td><td>Local Business Resource Workshop</td><td>Comunity Services Building </td></tr>
+                      <tr><td>12/14</td><td>Local Business Resource Workshop</td><td>Community Services Building </td></tr>
                       <tr><td>12/21</td><td>Winter Trails Day</td><td>Copperhead Recreation Area </td></tr>
                      <tr><td>12/24-12/26</td><td>Offices Closed </td><td>N/A</td></tr>
-                     <tr><td>12/31</td><td>New Years Eve Celebration</td><td>Comedy/Drama</td></tr>
+                     <tr><td>12/31</td><td>New Years Eve Celebration</td><td>Downtown</td></tr>
                      <tr><td>1/14</td><td>Board of Comissioners Meeting</td><td>Macon County Courthouse</td></tr>
                       <tr><td>1/25</td><td>Community Safety Town Hall</td><td>Macon County Emergency Services Center</td></tr>
                     </tbody></table>
